# python-package-template

./: .buildinfo  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  authors.html  changelog.html  contributing.html  development.html  genindex.html  index.html  installation.html  license.html  mypackage.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  license.doctree  mypackage.doctree
.doctrees/notebooks/: Basic_usage.doctree
.github/workflows/: build-test.yml  publish-docs.yml  pypi-publish.yml.DISABLED
_sources/: development.md.txt  index.rst.txt  installation.md.txt
docs/: Makefile  conf.py  mypackage.rst
docs/_static/: custom.css
docs/notebooks/: Basic_usage.ipynb
notebooks/: Basic_usage.html
src/mypackage/: __init__.py  cli.py  mypackage.py
tests/: test_mypackage.py  test_mypackage_cli.py
